--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ $('#sound').click(() => {
 
 
 document.getElementById("sello").addEventListener("click", function() {
-    //audio.play();
+    audio.play();
     $('#sound').find('img').attr('src','sound.svg');
     $('body').css('overflow-y', 'auto');
     document.querySelector(".protector").style.display = "none";
