--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <h1 class="font_charm fspx_20 m_0 ">Formal / Elegante</h1>
                     
                     <h1 class="font_paris fspx_40 m_0 mt_20">Regalos</h1><br>s
-                    <img class="max_wpx_80" src="code.png"><br><br>
+                    <img class="max_wpx_80" src="sobre.png"><br><br>
                     <h1 class="font_charm fspx_20 m_0 max_wpx_300">Tu presencia es mi mayor regalo, pero si deseas tener un detalle conmigo, te agradecería una lluvia de sobres.</h1>
                     
 
